--- a/_posts/2025-01-26-LTN①⑤.md
+++ b/_posts/2025-01-26-LTN①⑤.md
@@ -15,60 +15,761 @@ typora-root-url: ..
 
 # LTN做题
 
+> ①⑤ 错题重做
+
+❌作业6：new操作符实例化一个对象的过程
+❌作业66：React如何处理错误
+❌作业3：迭代器原理
+❌2021.06 子盒子在父盒子中水平垂直居中有几种方法？
+❌作业72：react 的 声明周期有哪些，在不同生命周期中做什么事情？
+❌作业87：Nextjs 中预渲染是什么？有哪些模式？写一个动态路由的page
+❌作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
+❌2021.07 数组扁平化（一层、全部展开、指定深度）
+❌作业25：简单写下 请求创建过程
+❌作业74：起舞弄清影 是那首诗？谁写的？下一句是什么？
+❌作业55：flex 常见缩写
+❌作业59：什么是高阶函数?什么是高阶组件？什么是副作用？简单举例
+❌作业61：常见的数据结构有哪些
+❌作业73：react 的 setState 是同步还是异步？为什么React有时候有两次 setState，却只执行一次？
+❌作业76：显卡的作用？
+❌作业90：金玉满堂是什么意思？在花卉中的说法是什么？
+❌作业91：三次握手的过程和具体包的作用
+❌作业92：前端中的序列化是什么？常见序列化方法
+❌作业93：闭包的作用和原理
+❌2021.07 事件流 + 事件模型
+❌2021.06 链表 141. 环形链表
+❌2021.09 get和post有什么区别
+❌作业24：写出事件循环系统的流程图，常见宏任务、微任务有哪些。并写出几个常见题目的输出结果
+
+```js
+Promise.resolve().then(() => {
+    console.log(1);
+    Promise.resolve().then(() => {
+        console.log(2);
+    }).then(() => {
+        console.log(3);
+    }).then(() => {
+        console.log(4);
+    })
+}).then(() => {
+    console.log(5);
+}).then(() => {
+    console.log(6);
+
+})
+------
+
+async1 = async () => {
+    console.log('async1 start');
+    await async2();
+    console.log('async1 end');
+}
+function async2(){
+    console.log('async2');
+}
+console.log('script start');
+setTimeout(() => {
+    console.log('setTimeout');
+})
+async1();
+new Promise(function(resolve) {
+    console.log('promise1');
+    resolve();
+}).then(() => {
+    console.log('promise2');
+    return new Promise(function(resolve) {
+        resolve();
+    })
+}).then(() => {
+    console.log('promise3');
+})
+console.log('script end');
+```
+
+
+
+
+
 > ①⑤ 74题 2025.1.27  - 2.4 开始
 
+2.8 - LTN2
+✅2021.05 29 WebSocket
+✅2021.05 XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击
+✅2019.07 深拷贝和浅拷贝的区别？怎么实现深拷贝？
+✅2020.03 模块化
+✅2021.06 跨页面通信
+✅2019.07 数组去重（算法整理）
+✅2021.07 柯里化函数实现
 
+2.8 - LTN1
+✅作业16（2）：arguments 对象对待命名参数和设置了默认值的命名参数有什么不同？数组作为参数传入函数得到的arguments 是什么？怎么实现arguments是数组？怎么收集独立参数？在对象字面量和数组字面量中，扩展运算符有什么不同的表现？
+✅作业 89：mysql 中类型的区别：varchar 和 char，date datetime
+❌作业90：金玉满堂是什么意思？在花卉中的说法是什么？
+❌作业91：三次握手的过程和具体包的作用
+❌作业92：前端中的序列化是什么？常见序列化方法
+❌作业93：闭包的作用和原理
+❌2021.07 事件流 + 事件模型
+❌2021.06 链表 141. 环形链表
+❌2021.09 get和post有什么区别
+
+```js
+// 2021.09 get和post有什么区别
+❌ // 1、从四个方面描述：数据参数 + 参数长度 + 回退安全性 + 缓存
+get：
+	请求参数在链接上； ⭐️ // 也就是请求行
+	参数大小限制；❌ // 2、参数长度：get - 大小限制2kb
+    ❌ // 4、回退安全性：get - 回退无害，参数被保留在浏览器历史记录
+    ❌ // 6、缓存：get - 请求会被浏览器主动 cache
+post：
+	请求参数在请求体；
+    数据大小限制很大 2kb；❌ // 3、参数长度：post - 没有限制
+    ❌ // 5、回退安全性：post - 回退时，post请求会被再次提交，参数不会被保留
+    ❌ // 7、缓存：post - 不会缓存，除非手动设置
+```
+
+```js
+// 2021.06 链表 141. 环形链表
+function circle(head) {
+    try{
+        JOSN.stringify(head);
+        return false;
+    } catch(e){
+        return true;
+    }
+}
+function circle2(head) {
+    while(head.next) { ❌ // 1、 while(head) 即可
+        if(head.circle) {
+            return true
+        }
+        head.circle = true;
+        head = head.next;
+    }
+    return false
+}
+```
+
+```js
+/
+/ 2021.07 事件流 + 事件模型
+- 第一遍 2025.2.8 -
+先捕获，再冒泡
+❌ /** 缺少详细描述
+	捕获：从 window->document->html->body 传递到最具体的节点
+	冒泡：从具体节点逐渐向上传播到DOM最高层父节点
+	现代事件模型：事件委托-利用事件冒泡，将事件处理程序添加到父元素
+	DOM2级事件模型：捕获+处理+冒泡
+*/
+```
+
+```js
+// 作业93：闭包的作用和原理
+- 第一遍 2025.2.8 -
+外部函数执行完毕后，会清理执行栈和内存将变量清理；但是如果内部函数引用了变量，变量将不被清理，以 closure 存储在内存 ⭐️ // 活动对象没有被销毁，词法作用域
+用于保存变量持续的值 ❌ // 保存状态 + 数据封装/私有变量 + 函数工厂 + 回调函数
+```
+
+```js
+// 作业92：前端中的序列化是什么？常见序列化方法
+- 第一遍 2025.2.8 -
+将不同的数据结构转换为 JSON
+❌ // 1、序列化是将数据结构/对象转换为可以存储/传输的格式的过程
+JSON.stringify ⭐️ // 特殊点：无法处理 Function 和 互相引用，循环引用时会报错
+❌ // 2、少写了 new FormData(form) 收集表单数据并序列化，转换成键值对的格式
+```
+
+```js
+// 作业91：三次握手的过程和具体包的作用
+- 第一遍 2025.2.8 -
+客户端：SYN
+服务端：SYN + ACK
+客户端：ACK
+SYN - ...不记得了 ❌ // 1、SYN是同步序列编号包
+ACK - 确认信息，有序列号 ❌ // 2、ACK确认包
+```
+
+```js
+// 作业90：金玉满堂是什么意思？在花卉中的说法是什么？
+- 第一遍 2025.2.8 -
+金玉满堂：很多内涵，夸奖 ⭐️ // 形容财富很多、比喻学识丰富
+海棠、(其他的不记得了)
+❌ // 1、花卉中的说法 玉堂春富贵 - 玉兰(玉)、海棠(堂)、迎春(春)、牡丹(富)、桂花(贵)
+```
+
+```js
+// 作业 89：mysql 中类型的区别：varchar 和 char，date datetime
+- 第一遍 2025.2.8 -
+varchar 按照内容长度存储
+char 需要指定固定存储长度，不论存储什么都是这么大内存占用 ⭐️ // 内容长度不够时，使用空格填充到指定长度
+date YYYY-MM-DD ⭐️ // 3字节
+datetime YYYY-MM-DD HH:MM:SS ⭐️ // 8字节
+```
+
+```js
+// 作业16（2）：arguments 对象对待命名参数和设置了默认值的命名参数有什么不同？数组作为参数传入函数得到的arguments 是什么？怎么实现arguments是数组？怎么收集独立参数？在对象字面量和数组字面量中，扩展运算符有什么不同的表现？
+- 第三遍 2025.2.8 -
+arguments 默认会同步命名参数，修改 aguments[1] 就会就该对应的命名参数
+但是不会同步 设置了默认值的命名参数
+数组直接传入：arguements=[[1,2,3]] ->(...arr)
+(first, ...rest)
+[...arr] => 扩展运算符，一一传入可迭代对象的值 
+{...obj} => 扩展运算符，复制可枚举属性
+- 第一遍 -
+❌ // 1、数组直接传入的 arguments 错了，应该是 [[1,2,3]]
+❌ // 2、{...obj} 作用描述有问题，复制的是 可枚举属性
+```
+
+```js
+// 2021.07 柯里化函数实现
+- 第二遍 2025.2.8 -
+function curry(fn, ...args1){
+	if(fn.length <= args1.length) {
+        fn(...args)
+    } else {
+        return (...args2) => curry(fn, ...args1, ...args2)
+    }
+}
+```
+
+```js
+// 2019.07 数组去重（算法整理）
+- 第三遍 2025.2.8 -
+1、[...new Set(arr)] Array.from(new Set(arr)) 
+2、arr.filter((it, index) => it === arr[index]) ⭐️ // 判断条件 index === arr.indexOf(it)
+3、
+function unique(arr){
+    const hash = {};
+	return arr.filter(it => hash[it] ? false : hash[it] = true)
+}
+- 第一遍 -
+❌ // 1、Set 不是数组类型，需要再次转换成数组 [...new Set(arr)] Array.from(new Set(arr))
+```
+
+```js
+// 2021.06 跨页面通信
+- 第三遍 2025.2.8 -
+同源页面：①localStorage setItem+window.onstorage=()=>{}，只能处理非当前页面
+②new BroadCastChannel('b') 两个页面实例化相同广播，b.postMessage('xxx')+b.onmessage=()=>{}
+非同源页面：
+③postMessage（H5 API：使用 const win = window.open(url); win.postMessage('xxx'); + window.onMessage=()=>{}
+④iframe 使用 origin 配置成同源
+- 第一遍 -
+❌ // 1、构造函数的名称记错：BroadCastChannel
+```
+
+```js
+// 2020.03 模块化
+- 第三遍 2025.2.8 -
+CommonJS：同步，适合服务端，运行时，输出值的拷贝，require+exports
+AMD：异步，依赖前置，并行加载多个依赖，按照加载先后顺序执行，无法控制执行时机，define(['a.js'], function(a){ a.call(); }) ⭐️ // 加载完了立即执行调用，无法按序执行
+CMD：异步，依赖就近，并行加载多个依赖，按照书写顺序执行，define(function(require, exports, model) { 
+	let a = require('./a.js'); ⭐️ // 加载后按序执行
+    a.call();
+})
+ES6：异步，服务端+客户端通用解决方案，编译时，输出值的引用，export default import as from 
+- 第一遍 -
+❌ // 1、少写了 AMD - 加载模块后直接执行，无法保证执行顺序；CMD - 加载后，直调调用才按序执行
+```
+
+```js
+// 2019.07 深拷贝和浅拷贝的区别？怎么实现深拷贝？
+- 第三遍 2025.2.8 -
+基础类型：深、浅拷贝都是拷贝一个副本
+引用类型：浅拷贝拷贝的是引用地址，修改新值会影响原值；深拷贝-引用地址指向的数据，修改新值不会影响原值
+浅：[...arr]/Array.from(arr)/arr.concat()/arr.slice()/Object.assign({}, obj)/{...obj}
+深：JSON.parse(JSON.stringify(target))/
+function isObj(t) {
+    const type = typeof t;
+    return t !== null && (type === 'function' || type === 'object');
+}
+function handleSpecial(t, type) {
+    switch(type) {
+		case '[object Date]':
+            return new Date(t.getTime());
+            break;
+		case '[object RegExp]':
+            return new RegExp(t.source, t.flags);
+            break;
+		case '[object Symbol]':
+            return Symbol.for(t.description);
+            break;
+        default:
+            const ctor = t.constructor;
+            return new ctor(t); 
+    }
+}
+function clone(target, m = new weakMap()) {
+    if(!isObject(target)) {
+        return target
+    }
+    const detailType = Object.prototype.toString.call(target);
+    const specialType = ['Map', 'Set', 'Array', 'Object'].map(it => `[object ${it}]`);
+    if(!specialType.includes(detailType)) {
+        return handleSpecial(target, detailType);
+    }
+    
+    const ctor = target.constructor;
+	let res = new ctor();
+    if(m.has(target)) {
+        return target;
+    }
+    m.set(target, res);
+    if(detailType === '[object Map]') {
+		target.forEach((value, key) => {
+            res.set(key, clone(value, m))
+        })
+    } else if (detailType === '[object Set]') {
+        target.forEach(it => {
+            res.add(clone(it, m))
+        })
+    } else if(Array.isArray(target)) {
+        target.forEach((it, index) => {
+            res[index] = clone(it, m);
+        })
+    } else {
+        for(let i in target) {
+            res[i] = clone(target[i], m);
+        }
+    }
+    return res
+}
+- 第一遍 -
+❌ // 1、属性名写错了：正则类型的 t.flags
+❌ // 2、 方法错了：object 不是可迭代对象，不能使用 for...of，这里应该改为 for...in
+```
+
+```js
+// 2021.05 XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击
+- 第三遍 2025.2.8 -
+脚本攻击的原因：浏览器给同源协议开了两个后门：①可以引入第三方数据 ②通过CORS可以请求第三方资源
+XSS跨域脚本攻击：
+定义-前端页面注入代码，修改服务端数据
+解决：①禁止渲染时 DOM 执行 js 代码，例如 img、script
+②服务端对用户输入等数据过滤、转义
+③HttpOnly 禁止js访问cookie，js引擎会禁用 document.cookie 等
+④CSP 内容安全策略 Content-Security-Policy 客户端信任的引入资源域名 meta+响应头 ⭐️ // script-src 'self'
+CSRF跨站请求伪造攻击：
+定义-冒用用户信息获取服务端信任，修改服务端数据
+①cookie Samesite
+②验证码+CSRF token
+③请求头 referer
+- 第二遍 -
+⭐️ // CSP - 从客户端角度讲的，哪些域名的资源可以被信任；CORS - 从服务端角度讲的，哪些域名可以访问这个资源
+- 第一遍 -
+❌ // 1、少写了：XSS的解决方案中，在「渲染时」禁止标签执行 js 代码
+```
+
+```js
+// 2021.05 29 WebSocket
+- 第三遍 2025.2.8 -
+全双工双向实时通讯协议
+由于 HTTP 的请求-应答模型，无法实现实时通讯
+1、使用新的协议 ws:80 wss:443
+2、使用新的发现服务方式 URI，而不是ip+端口
+3、不受同源协议限制、使用二进制帧，双向通讯 ⭐️ // 在语义语法上完全不兼容
+4、基于 HTTP 进行连接，GET 请求头中 Connection: update，如果响应头中 Update: websocket，切换协议
+- 第二遍 -
+❌ // 1、少写了：修改了协议名 ws:80 wss:443
+- 第一遍 -
+⭐️ // 2、少写了全名：全双工 - 双向通信协议
+```
+
+2.2 - LTN2
+❌作业25：简单写下 请求创建过程
+✅作业49：牛顿三大定律、热力学两大定律
+✅作业54：举杯邀明月，对影成三人。的上一句
+❌作业74：起舞弄清影 是那首诗？谁写的？下一句是什么？
+❌作业55：flex 常见缩写
+❌作业59：什么是高阶函数?什么是高阶组件？什么是副作用？简单举例
+❌作业61：常见的数据结构有哪些
+❌作业73：react 的 setState 是同步还是异步？为什么React有时候有两次 setState，却只执行一次？
+❌作业76：显卡的作用？
+✅作业77：重绘和重排是什么？有什么区别？
+✅作业79：地球四季的成因是什么？
+✅2019.07 显示省略号
+✅2021.04 25 HTTP/2 特性
+
+```js
+// 2021.04 25 HTTP/2 特性
+- 第三遍 2025.2.2 -
+语义上完全兼容 HTTP/1.1，语法上完全不一样
+1、压缩头部字段，HPACK字典表算法
+2、使用二进制帧，双向传输数据流-模拟虚拟的流，多路复用-多个请求响应复用一个连接，多个请求响应之间没有了顺序关系，解决了队头堵塞问题
+3、服务器推送
+4、使用HTTPS
+5、设置优先级
+- 第一遍 -
+❌ // 1、少写一个特性：服务器推送
+```
+
+```js
+// 2019.07 显示省略号
+- 第三遍 2025.2.2 -
+.line {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.lines {
+    display: -webkit-box-;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    ⭐️ // line-height: 10px; height: 30-padding;
+}
+- 第一遍 -
+❌ // 1、css 属性名错误：-webkit-box-orient: vertical;
+```
+
+```js
+// 作业79：地球四季的成因是什么？
+- 第二遍 2025.2.2 -
+和太阳旋转的椭圆形无关
+和太阳直射夹角 + 穿过大气层厚度有关（强度
+⭐️ // 直射点的移动 + 太阳照射时长 - 夹角和地面角度的改变，改变了太阳辐射面积和经过大气层的路程衰减的辐射能量强度
+```
+
+```js
+// 作业77：重绘和重排是什么？有什么区别？
+- 第二遍 2025.2.2 -
+解析DOM树 - 样式计算 css - 布局树 - 分层树 - 绘制
+重绘只需要修改分层+合成
+⭐️ // 触发方式主要是 字体、背景、边框颜色
+重排需要布局+分层+合成，性能消耗大
+⭐️ // 字体大小、padding/margin、激活伪类、style样式的修改、resize、页面初始渲染、DOM增删、位置内容的修改、DOM布局查询
+```
+
+```js
+// 作业76：显卡的作用？
+- 第二遍 2025.2.2 -
+用于绘制帧
+在后区渲染好之后，直接替换前区帧
+⭐️ // 合成新的图像，并将图形保存到后缓存区
+```
+
+```js
+// 作业73：react 的 setState 是同步还是异步？为什么React有时候有两次 setState，却只执行一次？
+- 第三遍 2025.2.2 -
+React 合成事件 - 异步；原生事件 - 同步
+❌ // 1、除了合成事件，还有「生命周期函数」中都是异步
+React 在处理 setState 的时候，在执行回调函数时，会创建一个队列存储，执行完回调函数，统一处理队列中的 setState ，有个合并处理机制 ⭐️ // 批量处理机制 + 更新一次 state ，触发一次重新渲染
+在原生事件中不受 React 管控，直接执行 ⭐️ // setState 一次，就会触发一次渲染
+- 第一遍 -
+❌ // 1、除了合成事件，还有生命周期函数
+```
+
+```js
+// 作业61：常见的数据结构有哪些
+- 第三遍 2025.2.2 -
+结构化数据：队列、栈、链表 ❌ // 1、少写了一个类型：数组
+非结构化数据：树、图
+```
+
+```js
+// 作业59：什么是高阶函数?什么是高阶组件？什么是副作用？简单举例
+- 第四遍 2025.2.2 -
+高阶函数：输入/输出是函数的函数，例如 map
+高阶组件：输入是组件
+副作用：在函数内部会修改外部参数、全局参数、IO ⭐️ // 除了返回值
+function fun(Child){
+    return class extends React.Component {
+        constructor(props) {
+            super(props);
+        }
+        render() {
+            return Child
+            ❌ // 1、<Child {...this.props} />
+        }
+    }
+}
+```
+
+```js
+// 作业55：flex 常见缩写
+- 第四遍 2025.2.2 -
+flex: none; // 0 0 auto
+flex: 1; // 1 1 0
+flex: auto; // 1 1 auto
+❌ // 1、少写了一个 flex: initial; // 0 1 auto
+- 第二遍 -
+❌ // 1、把 0 0 auto 的缩写写错，应该是 flex: none;
+- 第一遍 -
+❌ // 1、把 0 0 auto 的缩写写错，应该是 flex: none;
+```
+
+```js
+// 作业74：起舞弄清影 是那首诗？谁写的？下一句是什么？
+- 第二遍 2025.2.2 -
+宋 苏轼/苏东坡  ❌ // 1、题目记不起来：《水调歌头 明月几时有》
+我欲乘风归去，又恐琼楼玉宇，高处不胜寒
+不知天上宫阙，今夕是何年，何似在人间 ❌ // 2、乱序：起舞弄清影，何似在人间
+/**
+	明月几时有？把酒问青天。不知天上宫阙，今夕是何年。
+	我欲乘风归去，又恐琼楼玉宇，高处不胜寒。
+	起舞弄清影，何似在人间。
+	转朱阁，低绮户，照无眠。
+	不应有恨，何事长向别时圆。
+	人有悲欢离合，月有阴晴圆缺，此事古难全。
+	但愿人长久，千里共婵娟。
+*/
+```
+
+```js
+// 作业54：举杯邀明月，对影成三人。的上一句
+- 第三遍 2025.2.2 -
+花间一壶酒，独酌无相亲
+```
+
+```js
+// 作业49：牛顿三大定律、热力学两大定律
+- 第三遍 2025.2.2 -
+牛顿三大定律：加速度定律 a=F/m、惯性定律、作用力和反作用力
+热力学两大定律：能量守恒定律、熵增定律（在自然条件下，变得混乱是趋势
+- 第一遍 -
+❌ // 1、少写了惯性定律 - 公交车记忆：刹车-加速度、乘客-惯性、地上痕迹-摩擦
+```
+
+```js
+// 作业25：简单写下 请求创建过程
+- 第四遍 2025.2.2 -
+function request(url) {
+    let xhr = new XMLHttpRequest();
+    xhr.onerror = () => {}
+    xhr.ontimeout = () => {}
+    xhr.onreadystate = function (res) {  ❌ // 1、函数名称错误：onreadystatechange
+        switch(this.readyState) { ❌ // 2、属性不在 this 上，在 res 上：res.readyState
+            case 0:// 还未开始请求
+                ❌ // 3、请求还没开始，要使用 break 跳出循环
+            case:4
+                if(this.status === 200 || this.status === 304) {
+                    console.log(this.responseText)
+                }
+        }
+    }
+    xhr.open('GET', url, true); // 允许异步
+    xhr.timeout = 3000;
+    xhr.responseType = 'text';
+    xhr.setRequestHeader(key, value);
+    xhr.send();
+}
+- 第二遍 -
+❌ // 1、属性名称记错 ：res.readyState
+- 第一遍 -
+❌ // 1、open 的参数顺序记错了：xhr.open('GET', url, true)
+```
 
 1.31 - LTN1 - 8题
 
-作业70：Vue 和 React 的 Diff 算法比较
-作业72：react 的 声明周期有哪些，在不同生命周期中做什么事情？
-作业80：对DOM 树的理解 - 定义和作用
-作业86：Nextjs 中 Link 的变更是哪个版本开始的，有什么变更？从这个版本开始对路由有什么变更？
-作业87：Nextjs 中预渲染是什么？有哪些模式？写一个动态路由的page
-作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
-2021.07 数组扁平化（一层、全部展开、指定深度）
-2021.07 bind、apply/call三者异同+apply/call实现bind
+✅作业70：Vue 和 React 的 Diff 算法比较
+❌作业72：react 的 声明周期有哪些，在不同生命周期中做什么事情？
+✅作业80：对DOM 树的理解 - 定义和作用
+✅作业86：Nextjs 中 Link 的变更是哪个版本开始的，有什么变更？从这个版本开始对路由有什么变更？
+❌作业87：Nextjs 中预渲染是什么？有哪些模式？写一个动态路由的page
+❌作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
+❌2021.07 数组扁平化（一层、全部展开、指定深度）
+✅2021.07 bind、apply/call三者异同+apply/call实现bind
 
-2.1 - 50题
+```js
+// 2021.07 bind、apply/call三者异同+apply/call实现bind
+- 第五遍 2025.1.31 -
+同：改变函数的 this 指向 + 不传第一个参数时，函数的 this 指向 window
+异：bind 返回函数副本；apply/call 立即执行函数
+   apply 的第二个参数是类数组或者数组；call 接收多个参数
+Function.protytype.fakeBind = function(thisArg, ...args1) {
+    let func = this;
+    return function F(...args2) {
+        if(func instanceof F) {
+            return new func(...args1, ...args2)
+        }
+        func.call(thisArg, ...args1, ...args2)
+    }
+}
+- 第四遍 2025.1.25 -
+- 第三遍 2025.1.24 -
+❌ // 1、bind 实现应该绑定在原型对象上实现，这样才能 this 指向调用函数
+- 第二遍 2025.1.19 -
+❌ // 1、bind 函数接收多个参数 - 第一个是 this 指向；后面接收多个参数
+```
 
-LTN1
-作业36：多分支项目的大致情况
-作业37：大盘的大致情况
-作业69：useEffect useState模拟实现
-作业16（2）：arguments 对象对待命名参数和设置了默认值的命名参数有什么不同？数组作为参数传入函数得到的arguments 是什么？怎么实现arguments是数组？怎么收集独立参数？在对象字面量和数组字面量中，扩展运算符有什么不同的表现？
-作业 89：mysql 中类型的区别：varchar 和 char，date datetime
-作业90：金玉满堂是什么意思？在花卉中的说法是什么？
-作业91：三次握手的过程和具体包的作用
-作业92：前端中的序列化是什么？常见序列化方法
-作业93：闭包的作用和原理
-2021.07 事件流 + 事件模型
-2021.06 链表 141. 环形链表
-2021.09 get和post有什么区别
-作业36：多分支项目的大致情况
-作业37：大盘的大致情况
-作业38：部署两个项目的大致情况
-LTN2
-作业25：简单写下 请求创建过程
-作业49：牛顿三大定律、热力学两大定律
-作业54：举杯邀明月，对影成三人。的上一句
-作业74：起舞弄清影 是那首诗？谁写的？下一句是什么？
-作业55：flex 常见缩写
-作业59：什么是高阶函数?什么是高阶组件？什么是副作用？简单举例
-作业61：常见的数据结构有哪些
-作业73：react 的 setState 是同步还是异步？为什么React有时候有两次 setState，却只执行一次？
-作业76：显卡的作用？
-作业77：重绘和重排是什么？有什么区别？
-作业79：地球四季的成因是什么？
-2019.07 显示省略号
-2021.04 25 HTTP/2 特性
-2021.05 29 WebSocket
-2021.05 XSS跨域脚本攻击 和 CSRF跨站请求伪造攻击
-2019.07 深拷贝和浅拷贝的区别？怎么实现深拷贝？
-2020.03 模块化
-2021.06 跨页面通信
-2019.07 数组去重（算法整理）
-2021.07 柯里化函数实现
+```js
+// 2021.07 数组扁平化（一层、全部展开、指定深度）
+- 第五遍 2025.1.31 -
+一层：arr.flat()、[].concat(...arr)、[].concat.call([], ...arr)、[].concat.apply([], arr)
+全部展开：arr.flat(Infinity)、arr.toString().split(',')、JSON.parse(JSON.stringify(arr))
+❌ //  JSON.parse(JSON.stringify(arr)) 是用于深拷贝的，不能展开
+function expense(arr, deep = 1) {
+    return arr.reduce((pre, cur) => {
+        return pre.concat(Array.isArray(cur) && deep > 1 ? expense(cur, deep - 1) : cur)
+    })
+}
+- 第四遍 2025.1.25 -
+- 第三遍 2025.1.24 -
+❌ // 1、少写了 arr.flat(Infinity)
+❌ // 2、JSON.stringify 不会展开数组
+❌ // 3、全部展开递归函数中，pre 的值不要使用 push 来更新 - concat 既能处理数组，也能处理非数组
+- 第二遍 2025.1.19 -
+❌ // 1、deep 传递的时候要减一
+```
+
+```js
+// 作业88：mysql2 和 Sequelize 的使用场景？有哪些差异？简单写一个连接
+- 第三遍 2025.1.31 -
+mysql2 是适用于node场景的 mysql 驱动，可以直连数据库，但是需要写很多 SQL
+⭐️ // 提供了 mysql2/promise 模块，允许 async/await 、管理多个数据库连接；没有内置的对象关系映射ORM
+import { createPool } from 'mysql2' ❌ // 1、依赖包错了 mysql2/promise
+const pool = createPool({host, user, password}); ❌ // 2、少写了 database
+const connection = await pool.getConnection(); ❌ // 3、获取连接的函数错了 await pool.getConnect()
+const data = connection.execute('SELECT * FROM table') ❌ // 4、需要使用 await：const [rows] = await connection.execute('SELECT * FROM table')
+--
+Sequelize 数据库模块，ORM 把整个数据库表对象化，可以通过函数式编程直接调用使用，执行事务
+⭐️ // ORM 把数据库的表和行映射为对象模型
+import { sequelize, Datatypes, Modal } from 'sequelize'
+const se = new sequelize(database, user, password, {
+    host: 'localhost',
+    dialect: 'mysql2'
+})
+创建连接后，会一直保持连接状态，直到调用 se.close() 关闭连接
+class se extends Modal {}
+se.define('table', {
+    id: Datatypes.number
+}, {
+    underScore: false;
+})
+❌ // 5、有两种模型定义方法：一种是 define，另一种 extends Modal + init
+/**
+const User = se.define('table', {
+    id: Datatypes.number
+}, {
+    underScore: false;
+})
+--
+class User extends Modal {}
+User.init({
+	id: Datatypes.number
+}, {
+	sequelize: se, // 传递连接实例
+	modalName: 'User' // 模型名称
+})
+最后调用： User.findAll({ attribute: ['id', 'name'] })
+*/
+
+- 第二遍 2025.1.26 -
+❌ // 1、mysql2 的依赖包是 mysql2/promise
+❌ // 2、mysql2 创建连接池不需要 await:const pool = createPool({host, user, password, database})
+❌ // 3、mysql2 获取连接时需要 await:const connection = await pool.getConnect()
+❌ // 4、mysql2 查询数据时需要 await:const [rows] = await connectiom.execute('SQL')
+❌ // 5、sequelize 实例化创建连接 const s = new sequelize(database, user, password, { host, dialect })
+❌ // 6、sequelize 模型定义的底层 - 先扩展，再init定义
+
+- 第一遍 2025.1.22 -
+❌ // 1、mysql2 提供的连接的两个特点： mysql2/promise 支持 async/await + 管理多个数据库连接池
+❌ // 2、sequelize 将数据库的表和行映射为对象模型，直接通过 js 操作
+```
+
+```js
+// 作业87：Nextjs 中预渲染是什么？有哪些模式？写一个动态路由的page
+- 第三遍 2025.1.31 -
+预渲染：包含服务端渲染 SSR、静态生成SSG、ISR 增量静态生成
+SSR:getServerSideProps 客户端每次请求，都在服务端构建 HTML，动态引入 data 数据，返回给客户端直接渲染，而不是交给客户端js
+SSG+ISR:getDerivedStateParams + revalidate 在构建时，直接生成 HTML，超过更新时间后，后台直接重新构建
+❌ // 1、记错函数名称，13.x 之前是 getStaticProps，现在已经改为 generateStaticParams，用于生成动态路由的参数列表
+SSR
+import { getServerSideProps } from 'next/server'
+function Blog({ data }) { return <div>{data}</div> }
+async function getServerSideProps() {
+    const data = await fetch('xxxx');
+    return { props: { data: data.json() } }
+    ❌ // 2、data.json() 是异步的，异步解析数据，处理 json 数据转换为 js 对象 - const res = await data.json;
+}
+export default Blog;             
+SSG
+function Blog({ data }) { return <div>{data}</div> }
+async function getDerivedStateParams() {
+    const data = await fetch('xxxx');
+    return { props: { data: data.json() } }
+    ❌ // 3、return 的应该是个路由列表 例如 return [{slug: 'first'}, {slug: 'second'}]
+}
+const revalidate = 60; // 秒
+❌ // 4、export const revalidate = 60; // 页面重新验证时间
+export default Blog;
+                         
+- 第二遍 2025.1.26 -
+❌ // 1、SSR getServerSideProps: fetch 数据需要 await: const data = await fetch('xxx')
+❌ // 1、SSR getServerSideProps: 异步解析数据需要 await: const res = await data.json()
+- 第一遍 2025.1.22 -
+❌ // 1、SSG generateStaticParams 用于生成动态路由的参数列表
+❌ // 2、SSG revalidate 用于定义页面重新验证时间 - 页面将重新生成，运行时生成/更新静态页面以增量更新
+```
+
+```js
+// 作业86：Nextjs 中 Link 的变更是哪个版本开始的，有什么变更？从这个版本开始对路由有什么变更？
+- 第二遍 2025.1.31 -
+13.x 开始 Link 中不再写 a 标签用于跳转 - 因为 Link 会被解析为 a 标签
+文件路由系统 - 从 pages 改为 src/app/page.tsx，Layout.tsx global.css 可以直接修改全局布局，方便布局
+后端路由系统 - src/app/api/route.tsx
+- 第一遍 2025.1.22 -
+❌ // 1、少写了后端路由系统
+```
+
+```js
+// 作业80：对DOM 树的理解 - 定义和作用
+- 第三遍 2025.1.31 -
+DOM 树是 HTML 的树形对象结构，属性对应于 DOM 节点的各种特性 ⭐️ // 「对象化表示」，是按照 HTML 结构转换的树形结构的对象模型
+js - DOM 树提供了 JS 访问、修改 HTML 的交互接口
+浏览器 - 浏览器渲染依赖于 DOM 结构 ⭐️ // 浏览器根据 DOM 结构构建页面布局
+框架 - 框架利用 VDOM 比较得到最小更新 UI 量，再改动真实 DOM，提高了 Diff 性能 ⭐️ // 提高页面更新性能
+- 第二遍 2025.1.25 -
+- 第一遍 2025.1.24 -
+❌ // 1、除了js，少写了浏览器 - 渲染页面的依据和框架视角 - VDOM Diff 计算提高更新性能
+```
+
+```js
+// 作业72：react 的 声明周期有哪些，在不同生命周期中做什么事情？
+- 第六遍 2025.1.31 -
+类组件
+挂载阶段
+getDerivedStateFromProps
+componentDidMount - 首次渲染执行
+render
+❌ // 1、少写了 constructor - 初始化 state 和绑定事件处理函数的 this
+更新阶段
+getDerivedStateFromProps
+componentDidUpdate - 更新后执行
+shouldComponentUpdate(nextProps, nextState) - 返回布尔值判断是否需要重新渲染
+render
+卸载阶段
+componentWillUnMount - 卸载前执行
+
+函数组件
+useEffect 模拟 componentDidMount回调函数执行一次 ⭐️ // 内部函数
+		  模拟 componentDidUpdate 依赖更新，再次执行回调函数
+          模拟 componentWillUnMount 返回一个清理函数，在组件卸载前执行
+useLayoutEffect 在 commit 阶段后，同步执行函数，阻塞重绘
+- 第五遍 2025.1.25 -
+- 第四遍 2025.1.24 -
+❌ // 1、shouldComponentUpdate 写错在挂载阶段，实际应该归属于更新阶段
+❌ // 2、阶段划分是：挂载-更新-卸载，其中更新阶段记错了 - 应该是当组件的 state/props 变化，进入更新阶段，重新执行 render 函数来更新 DOM
+- 第三遍 2025.1.19 -
+❌ // 1、挂载阶段：少写了 constructor - 初始化 state 和绑定时间处理函数的 this
+❌ // 2、除了类组件函数的生命周期，还要意识到函数组件也通过 hooks 模拟生命周期
+```
+
+```js
+// 作业70：Vue 和 React 的 Diff 算法比较
+- 第六遍 2025.1.31 -
+Vue 双端指针指针算法 + 静态节点跳过 + 找不到匹配节点，先判断同类型+同 key 的节点是否同索引，索引相同则复用 + 列表组件，同类型同key 的节点复用
+React：分层比较 + 同层级同类型节点优先比较 - 不同节点类型，直接重新渲染；同类型同key 移动复用；同类型 修改属性
+⭐️ // React 是精确到节点属性级别的 Diff 计算，适合大型动态复杂场景；Vue 基于组件级别的 Diff 计算
+- 第五遍 2025.1.25 -
+❌ // 1、Vue 少写了静态节点跳过 + 基于组件级别的更新算法
+❌ // 2、React 是基于单个节点属性级别，适合大型冬天复杂场景
+- 第四遍 2025.1.24 -
+❌ // 1、Vue - 找不到匹配的节点后，先找同类型+同key的节点进行索引比较，一致则复用，不一致则移动到新位置修改复用
+- 第三遍 2025.1.18 -
+❌ // 1、Vue - 双端指针算法比较后，是找同类型和同key的节点比较
+❌ // 2、Vue - 少写了：静态节点跳过比较
+- 第二遍 2025.1.13 -
+```
 
 
 
