--- a/_posts/浏览器原理相关内容/2021-07-01-事件流 + 事件模型.md
+++ b/_posts/浏览器原理相关内容/2021-07-01-事件流 + 事件模型.md
@@ -17,8 +17,8 @@ typora-root-url: ..
 
 ### 一、事件流
 
-- 事件冒泡：从下往上的传播方式 - 事件最开始由最具体的元素然后逐渐向上传播到DOM中最高层的父节点 `window` -> `document` -> `html` -> `body` -> ...
-- 事件捕获：与事件冒泡相反，事件最开始由不太具体的节点最早接受事件, 而最具体的节点最后接受事件
+- 事件捕获：与事件冒泡相反，事件最开始由不太具体的节点最早接受事件, 而最具体的节点最后接受事件 `window` -> `document` -> `html` -> `body` -> ...
+- 事件冒泡：从下往上的传播方式 - 事件最开始由最具体的元素然后逐渐向上传播到DOM中最高层的父节点 
 
 <img src="../img/assets_2019/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L3FxXzI3OTI2MTE5,size_16,color_FFFFFF,t_70.png" alt="img" style="zoom:50%;" />
 
@@ -26,7 +26,7 @@ typora-root-url: ..
 
  **通过监听函数对事件作出反应** — 事件驱动式编程模型 - 推荐使用 `addEventListener`
 
-- 现代事件模型（Event Delegation）
+- 现代事件模型-事件委托（Event Delegation）
     - 过程：**事件委托**是一种现代的事件处理技术，它利用事件冒泡的特性，将 **事件处理程序添加到父元素**上，而不是为每个子元素单独添加事件处理程序
     - 绑定方法：`parentElement.addEventListener('click', handleClick);`
 
